src/theme/style.css
/* App header */
.header-logo {
    content: url("/assets/icon/projectCardinal_logo.svg");
    display: block;
    height: 35px;
    padding-right: 3px;
    margin-left: auto;
  }
  .header-text {
    margin-right: auto;
  }
  .header-box {
    display: flex;
    align-items: center;
  }


/* Button pages */
.small-title {
  font-size: 1.3rem;
}
.categ-sub-title {
  font-size: 1.1rem;
  display: block;
  padding-top: 15px;
  color: var(--ion-color-dark);
}
ion-card-header {
  padding-bottom: 0px;
}
.instructions-card {
  margin-top: 10px;
}
.header-title {
    padding-top: 0px;
    padding-bottom: 0px;
}
.nav-icons {
    font-size: 50px;
    color: var(--ion-color-dark);
    user-select: none;
    vertical-align: middle;
    line-height: 70px;
}
/* do not enable :hover on mobile */
@media (hover: hover) {
  .nav-icons:hover {
  color: var(--ion-color-primary);
  }
}
/* .nav-icons:active {
  color: var(--ion-color-primary);
} */
.nav-container {
    text-align: center;
    vertical-align: middle;
}
.btn-lang {
    margin: 10px 15px 0px 15px;
}
.item-lang {
    width: 100%;
}
ion-select {
    min-width: 70%;
    text-align: right;
}


  /* Markdown text style */
 .md-text {
  font-size: 1rem;
}
.md-text p {
 font-size: 1rem;
 padding-top: 0rem;
 padding-bottom: 0.5rem;
 color:#333333;
}
.dark .md-text p {
 color: #e2e2e2;
}
.md-text li {
 color: #333333;
}
.dark .md-text li {
 color: #e2e2e2;
}
.md-text em {
 font-size: 0.9rem;
}
.md-text h2 {
 font-size: 1.1rem;
 font-weight: bold;
 hyphens: none;
}
.md-text h3 {
 font-size: 1.1rem;
 font-weight: bold;
 padding-top: 0.6rem;
 hyphens: none;
}
.md-text h3:first-child {
 padding-top: 0px;
}
.md-text h4 {
 font-size: 1rem;
 font-weight: 600;
 font-style: italic;
 padding-top: 0.6rem;
 padding-bottom: 0.4rem;
 hyphens: none;
}
.md-text ol {
 margin-top: 0px;
 padding-inline-start: 20px;
}
.md-text ul {
 margin-top: 0px;
 padding-inline-start: 20px;
}
.md-text ul li p {
   padding-top: 0px;
   padding-bottom: 0.2rem;
}
.md-text img {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 95%;
   padding-top: 5px;
   padding-bottom: 5px;
}
.md-text a {
 text-decoration: none;
}
.md-text table {
 width: 100%
}
.md-text td {
 text-align: center;
}


/* About Us */
.aboutus-avatar-item {
  padding-top: 5px;
  padding-bottom: 10px;
}
.aboutus-avatar {
  height: 100px;
  width: 100px;
  margin-right: 10px;
}
.md-text .aboutus-avatar img {
  padding-top: 0px;
  padding-bottom: 0px;
}
.md-text .aboutus-title {
  padding-top: 0px;
  font-size: 0.95rem;
}
.md-text .aboutus-subtitle {
  padding-bottom: 0px;
  font-size: 0.9rem;
}
.aboutus-label {
  margin-top: 0px;
  margin-bottom: 0px;
}
.dark .aboutus-avatar-item {
  --ion-item-background: #1c1c1d;
}
.dark .aboutus-avatar-item {
  background-color: #1c1c1d;
}

/* Disable magnifier on iOS*/
body {
  -webkit-touch-callout: none;
  -webkit-text-size-adjust: none;
  -webkit-user-select: none;
}

